spacing fix

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -172,10 +172,6 @@ p {
     line-height: 1.75rem;
 }
 
-p.company {
-    margin: 0 !important;
-}
-
 p strong{
     font-weight: 600 !important;
 }
@@ -293,6 +289,7 @@ ul {
 ul,
 ol {
     font-size: 1em;
+    margin-top: 0;
     font-weight: 400;
     line-height: 1.5rem;
     padding: 0;
@@ -856,7 +853,7 @@ span img {
     margin: 0px 0 26px 0;
 }
 
-h1 + div > h2 {
+h1 + div > h2:first-of-type {
     margin-top: 16px;
 }
 
